--- a/POSVTA4/REPORTE-CORTE-V1.2.html
+++ b/POSVTA4/REPORTE-CORTE-V1.2.html
@@ -6,208 +6,203 @@
   <title>Reportes de Ventas Cortadas</title>
 
 <script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-  import { getFirestore, collection, getDocs, updateDoc, doc, getDoc }
-    from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+import { getFirestore, collection, getDocs, updateDoc, doc, getDoc }
+  from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyCK5nb6u2CGRJ8AB1aPlRn54b97bdeAFeM",
-    authDomain: "inventariopv-643f1.firebaseapp.com",
-    projectId: "inventariopv-643f1",
-    storageBucket: "inventariopv-643f1.appspot.com",
-    messagingSenderId: "96242533231",
-    appId: "1:96242533231:web:d2f1e80b17f123456789"
-  };
+const firebaseConfig = {
+  apiKey: "AIzaSyCK5nb6u2CGRJ8AB1aPlRn54b97bdeAFeM",
+  authDomain: "inventariopv-643f1.firebaseapp.com",
+  projectId: "inventariopv-643f1",
+  storageBucket: "inventariopv-643f1.appspot.com",
+  messagingSenderId: "96242533231",
+  appId: "1:96242533231:web:d2f1e80b17f123456789"
+};
 
-  const app = initializeApp(firebaseConfig);
-  const db = getFirestore(app);
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
 
-  // =====================================================
-  // CARGAR Y AGRUPAR VENTAS
-  // =====================================================
-  async function cargarVentas() {
-    const contenedor = document.getElementById("reportes");
-    contenedor.innerHTML = "<p>Cargando reportes...</p>";
+// =====================================================
+// CARGAR Y AGRUPAR VENTAS
+// =====================================================
+async function cargarVentas() {
+  const contenedor = document.getElementById("reportes");
+  contenedor.innerHTML = "<p>Cargando reportes...</p>";
 
-    const snapshot = await getDocs(collection(db, "ventas_rutav2"));
-    let reportes = {};
+  const snapshot = await getDocs(collection(db, "ventas_rutav2"));
+  let reportes = {};
 
-    snapshot.forEach(docSnap => {
-      const data = docSnap.data();
-      if (!data.cortado || !Array.isArray(data.detalle)) return;
+  snapshot.forEach(docSnap => {
+    const data = docSnap.data();
+    if (!data.cortado || !Array.isArray(data.detalle)) return;
 
-      const fechaVenta = data.fecha ? new Date(data.fecha.seconds * 1000) : docSnap.createTime.toDate();
-      const fecha = fechaVenta.toLocaleDateString("es-MX", {
-        day: "numeric", month: "long", year: "numeric"
+    const fechaVenta = data.fecha ? new Date(data.fecha.seconds * 1000) : docSnap.createTime.toDate();
+    const fecha = fechaVenta.toLocaleDateString("es-MX", {
+      day: "numeric", month: "long", year: "numeric"
+    });
+
+    const vendedor = data.usuarioNombre || "SIN NOMBRE";
+    const ruta = data.rutaId || "Sin ruta";
+    const factura = data.factura || "";
+    const nota = (data.notas || "").trim();
+    const folio = data.folio || "";
+
+    let totalVenta = 0;
+    if (data.resumen_financiero && data.resumen_financiero.total != null) {
+      totalVenta = Number(data.resumen_financiero.total);
+    }
+
+    const clave = `${fecha}_${vendedor}_${ruta}`;
+
+    if (!reportes[clave]) {
+      reportes[clave] = {
+        fechaVenta,
+        fecha,
+        vendedor,
+        ruta,
+        factura,
+        productos: {},
+        totalGeneral: 0,
+        notasLista: [],
+        docsIds: []
+      };
+    }
+
+    reportes[clave].docsIds.push(docSnap.id);
+
+    if (nota !== "") {
+      reportes[clave].notasLista.push({
+        nota,
+        folio,
+        totalVenta,
+        ventaId: docSnap.id
       });
+    }
 
-      const vendedor = data.usuarioNombre || "SIN NOMBRE";
-      const ruta = data.rutaId || "Sin ruta";
-      const factura = data.factura || "";
-      const nota = (data.notas || "").trim();
-      const folio = data.folio || "";
+    // productos
+    data.detalle.forEach(item => {
+      const codigo = item.codigo || item.id || "";
+      const nombre = item.nombre || "SIN NOMBRE";
+      const cantidad = Number(item.cantidad) || 0;
 
-      let totalVenta = 0;
-      if (data.resumen_financiero?.total != null) {
-        totalVenta = Number(data.resumen_financiero.total);
-      }
+      const precioUnit =
+        item.precio_unit ??
+        item.precioUnit ??
+        item.precioPublico ??
+        item.precio ??
+        item.precioVenta ??
+        0;
 
-      const clave = `${fecha}_${vendedor}_${ruta}`;
+      const total = item.importe ?? (cantidad * precioUnit);
 
-      if (!reportes[clave]) {
-        reportes[clave] = {
-          fechaVenta,
-          fecha,
-          vendedor,
-          ruta,
-          factura,
-          productos: {},
-          totalGeneral: 0,
-          notasLista: [],
-          docsIds: []
+      if (!reportes[clave].productos[codigo]) {
+        reportes[clave].productos[codigo] = {
+          nombre,
+          cantidad: 0,
+          precioUnit,
+          total: 0
         };
       }
 
-      reportes[clave].docsIds.push(docSnap.id);
+      reportes[clave].productos[codigo].cantidad += cantidad;
+      reportes[clave].productos[codigo].total += total;
 
-      if (nota !== "") {
-        reportes[clave].notasLista.push({
-          nota,
-          folio,
-          totalVenta,
-          ventaId: docSnap.id
-        });
-      }
-
-      data.detalle.forEach(item => {
-        const codigo = item.codigo || item.id || "";
-        const nombre = item.nombre || "SIN NOMBRE";
-        const cantidad = Number(item.cantidad) || 0;
-        const precioUnit =
-          item.precio_unit ??
-          item.precioUnit ??
-          item.precioPublico ??
-          item.precio ??
-          item.precioVenta ??
-          0;
-
-        const total = item.importe ?? (cantidad * precioUnit);
-
-        if (!reportes[clave].productos[codigo]) {
-          reportes[clave].productos[codigo] = {
-            nombre,
-            cantidad: 0,
-            precioUnit,
-            total: 0
-          };
-        }
-
-        reportes[clave].productos[codigo].cantidad += cantidad;
-        reportes[clave].productos[codigo].total += total;
-
-        reportes[clave].totalGeneral += total;
-      });
-
+      reportes[clave].totalGeneral += total;
     });
 
-    const lista = Object.values(reportes).sort((a, b) => b.fechaVenta - a.fechaVenta);
-    mostrarReportes(lista);
+  });
+
+  const lista = Object.values(reportes).sort((a, b) => b.fechaVenta - a.fechaVenta);
+  mostrarReportes(lista);
+}
+
+// =====================================================
+// MODAL
+// =====================================================
+function cerrarModal() {
+  document.getElementById("modalVenta").style.display = "none";
+}
+
+async function abrirDetalleVenta(id) {
+  const ref = doc(db, "ventas_rutav2", id);
+  const snap = await getDoc(ref);
+
+  if (!snap.exists()) {
+    alert("No se encontró la venta.");
+    return;
   }
 
-  // =====================================================
-  // MODAL FUNCTIONS
-  // =====================================================
-  function cerrarModal() {
-    document.getElementById("modalVenta").style.display = "none";
-  }
+  const data = snap.data();
 
-  // =====================================================
-  // ABRIR DETALLE VENTA EN MODAL
-  // =====================================================
-  async function abrirDetalleVenta(id) {
+  document.getElementById("modalVenta").style.display = "flex";
 
-    const ref = doc(db, "ventas_rutav2", id);
-    const snap = await getDoc(ref);
+  const cont = document.getElementById("detalleVentaContenido");
+  cont.innerHTML = `
+    <h2>Detalle de Venta</h2>
 
-    if (!snap.exists()) {
-      alert("No se encontró la venta.");
-      return;
-    }
+    <p><strong>Folio:</strong> ${data.folio || ""}</p>
+    <p><strong>Fecha:</strong> ${data.fecha_txt || ""}</p>
+    <p><strong>Nota:</strong> ${data.notas || ""}</p>
+    <p><strong>Total:</strong> $${data.resumen_financiero?.total || 0}</p>
 
-    const data = snap.data();
+    <table>
+      <thead>
+        <tr>
+          <th>Código</th>
+          <th>Producto</th>
+          <th>Cantidad</th>
+          <th>Precio</th>
+          <th>Total</th>
+        </tr>
+      </thead>
+      <tbody>
+        ${
+          data.detalle.map(p => `
+            <tr>
+              <td>${p.codigo}</td>
+              <td>${p.nombre}</td>
+              <td>${p.cantidad}</td>
+              <td>$${p.precio_unit}</td>
+              <td>$${p.importe}</td>
+            </tr>
+          `).join("")
+        }
+      </tbody>
+    </table>
+  `;
+}
 
-    const cont = document.getElementById("detalleVentaContenido");
+// =====================================================
+// MOSTRAR REPORTES
+// =====================================================
+function mostrarReportes(reportes) {
+  const contenedor = document.getElementById("reportes");
+  contenedor.innerHTML = "";
 
-    cont.innerHTML = `
-      <span class="cerrar-modal" id="cerrarX">✖</span>
+  reportes.forEach(rep => {
+    const card = document.createElement("div");
+    card.className = "card";
+    if (!rep.factura) card.classList.add("sin-factura");
 
-      <h2>Detalle de Venta</h2>
-      <p><strong>Folio:</strong> ${data.folio}</p>
-      <p><strong>Fecha:</strong> ${data.fecha_txt}</p>
-      <p><strong>Nota:</strong> ${data.notas}</p>
-      <p><strong>Total:</strong> $${data.resumen_financiero?.total || 0}</p>
-
-      <table>
-        <thead>
-          <tr>
-            <th>Código</th>
-            <th>Producto</th>
-            <th>Cantidad</th>
-            <th>Precio</th>
-            <th>Total</th>
-          </tr>
-        </thead>
-        <tbody>
-          ${data.detalle
-            .map(
-              p => `
-          <tr>
-            <td>${p.codigo}</td>
-            <td>${p.nombre}</td>
-            <td>${p.cantidad}</td>
-            <td>$${p.precio_unit}</td>
-            <td>$${p.importe}</td>
-          </tr>`
-            )
-            .join("")}
-        </tbody>
-      </table>
+    const header = document.createElement("div");
+    header.className = "card-header";
+    header.innerHTML = `
+      <div class="header-left">
+        <h2>🧾 Reporte ${rep.fecha}</h2>
+        <p><strong>Ruta:</strong> ${rep.ruta} | <strong>Vendedor:</strong> ${rep.vendedor}</p>
+      </div>
+      <div class="header-right">
+        <label>No. Factura:</label>
+        <input type="text" class="factura-input" value="${rep.factura || ""}" placeholder="Ingrese número">
+      </div>
     `;
 
-    document.getElementById("modalVenta").style.display = "flex";
+    const body = document.createElement("div");
+    body.className = "card-body";
+    body.style.display = "none";
 
-    document.getElementById("cerrarX").onclick = cerrarModal;  
-  }
-
-  // =====================================================
-  // MOSTRAR REPORTES
-  // =====================================================
-  function mostrarReportes(reportes) {
-    const contenedor = document.getElementById("reportes");
-    contenedor.innerHTML = "";
-
-    reportes.forEach(rep => {
-      const card = document.createElement("div");
-      card.className = "card";
-      if (!rep.factura) card.classList.add("sin-factura");
-
-      const header = document.createElement("div");
-      header.className = "card-header";
-      header.innerHTML = `
-        <div class="header-left">
-          <h2>🧾 Reporte ${rep.fecha}</h2>
-          <p><strong>Ruta:</strong> ${rep.ruta} | <strong>Vendedor:</strong> ${rep.vendedor}</p>
-        </div>
-        <div class="header-right">
-          <label>No. Factura:</label>
-          <input type="text" class="factura-input" value="${rep.factura || ""}" placeholder="Ingrese número">
-        </div>
-      `;
-
-      const body = document.createElement("div");
-      body.className = "card-body";
-      body.style.display = "none";
-
+    // NOTAS CLICKABLES
+    if (rep.notasLista.length > 0) {
       rep.notasLista.forEach(n => {
         const box = document.createElement("div");
         box.className = "nota-box";
@@ -216,31 +211,87 @@
           <strong>Folio:</strong> ${n.folio}<br>
           <strong>Total:</strong> $${n.totalVenta.toFixed(2)}
         `;
-
         box.style.cursor = "pointer";
         box.onclick = () => abrirDetalleVenta(n.ventaId);
 
         body.appendChild(box);
       });
+    }
 
-      const totalTop = document.createElement("div");
-      totalTop.className = "total-box";
-      totalTop.innerHTML = `<strong>Total General: $${rep.totalGeneral.toFixed(2)}</strong>`;
+    // =====================================================
+    // TABLA DE CONCENTRADO (RESTAURADA)
+    // =====================================================
+    const totalTop = document.createElement("div");
+    totalTop.className = "total-box";
+    totalTop.innerHTML = `<strong>Total General: $${rep.totalGeneral.toFixed(2)}</strong>`;
 
-      body.appendChild(totalTop);
+    const tabla = document.createElement("table");
+    tabla.innerHTML = `
+      <thead>
+        <tr>
+          <th>Código</th>
+          <th>Producto</th>
+          <th>Cantidad</th>
+          <th>Precio Unitario</th>
+          <th>Total</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    `;
 
-      header.onclick = () => {
-        body.style.display = body.style.display === "none" ? "block" : "none";
-      };
+    const tbody = tabla.querySelector("tbody");
 
-      card.appendChild(header);
-      card.appendChild(body);
-      contenedor.appendChild(card);
-    });
-  }
+    for (const [codigo, info] of Object.entries(rep.productos)) {
+      const fila = document.createElement("tr");
+      fila.innerHTML = `
+        <td>${codigo}</td>
+        <td>${info.nombre}</td>
+        <td>${info.cantidad}</td>
+        <td>$${info.precioUnit.toFixed(2)}</td>
+        <td>$${info.total.toFixed(2)}</td>
+      `;
+      tbody.appendChild(fila);
+    }
 
-  window.onload = cargarVentas;
+    const totalBottom = document.createElement("div");
+    totalBottom.className = "total-box";
+    totalBottom.innerHTML = `<strong>Total General: $${rep.totalGeneral.toFixed(2)}</strong>`;
+    // =====================================================
+
+    // guardar factura
+    const botonGuardar = document.createElement("button");
+    botonGuardar.textContent = "💾 Guardar Factura";
+    botonGuardar.onclick = async () => {
+      const factura = card.querySelector(".factura-input").value.trim();
+      if (!factura) return alert("Ingrese un número de factura.");
+
+      for (const id of rep.docsIds) {
+        await updateDoc(doc(db, "ventas_rutav2", id), { factura });
+      }
+
+      card.classList.remove("sin-factura");
+      alert("Factura guardada.");
+    };
+
+    // ensamblar
+    body.appendChild(totalTop);
+    body.appendChild(tabla);
+    body.appendChild(totalBottom);
+    body.appendChild(botonGuardar);
+
+    header.onclick = () => {
+      body.style.display = body.style.display === "none" ? "block" : "none";
+    };
+
+    card.appendChild(header);
+    card.appendChild(body);
+    contenedor.appendChild(card);
+  });
+}
+
+window.onload = cargarVentas;
 </script>
+
 
 <style>
   body{font-family:Poppins;background:#eef1f5;margin:20px;color:#111}
