--- a/INSTAPDD/viewer.html
+++ b/INSTAPDD/viewer.html
@@ -49,6 +49,17 @@ select {
   gap: 3px;             /* separación tipo instagram */
   padding: 3px;
 }
+/* Cada item debe ser cuadrado IG REAL */
+.grid-item {
+  position: relative;
+  width: 100%;
+  padding-top: 100%; /* 🔥 CREA EL CUADRADO PERFECTO */
+  overflow: hidden;
+  border-radius: 3px;
+  background: #eee;
+  cursor: pointer;
+  box-sizing: border-box;
+}
 
 .grid-item img {
   position: absolute;
