--- a/INSTAPDD/viewer.html
+++ b/INSTAPDD/viewer.html
@@ -164,18 +164,17 @@ select {
   background: #00c853; /* VERDE DE SELECCIÓN */
   border-color: white;
 }
-/* 🔥 ALERTA RECLAMACIÓN – NEÓN TURQUESA */
+/* 🔥 ALERTA RECLAMACIÓN – AMARILLO NEÓN */
 .alert-reclamacion {
-  border: 3px solid #00e5ff !important;
-  animation: blink-reclamacion 0.9s infinite !important;
+  border: 3px solid #fff200 !important; /* Amarillo neón */
+  animation: blink-reclamacion 0.85s infinite !important;
 }
 
 @keyframes blink-reclamacion {
-  0%   { box-shadow: 0 0 10px #00e5ff; }
-  50%  { box-shadow: 0 0 28px #72faff; }
-  100% { box-shadow: 0 0 10px #00e5ff; }
+  0%   { box-shadow: 0 0 10px #fff200; }
+  50%  { box-shadow: 0 0 32px #fffb7a; }
+  100% { box-shadow: 0 0 10px #fff200; }
 }
-
 
 </style>
 </head>
